[package]
name = "tachyon"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rusqlite = { version = "0", features = ["chrono"] }

[features]
# uncoment for an easier vscode workflow
# default = ["time_travel"]
time_travel = []
